<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Integrar viewModel en el diseño -->

    <data>
        <variable
            name="viewModel"
            type="com.example.evintegradoracinco.viewModel.SingUpViewModel" />

        <variable
            name="lifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />
    </data>


    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SingUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_avion">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="351dp"
            android:layout_height="545dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37">

            <TextView
                android:id="@+id/tituloP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/jua"
                android:text="@string/titulo_p4"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombreP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/hintNombreP4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/nombre_hint"
                android:inputType="text"
                android:paddingStart="8dp" />

            <TextView
                android:id="@+id/apellidoP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/apellido" />

            <EditText
                android:id="@+id/hintApellP4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/apellido_hint"
                android:inputType="text"
                android:paddingStart="8dp" />

            <TextView
                android:id="@+id/emailP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/email" />

            <EditText
                android:id="@+id/hintEmailP4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp" />

            <TextView
                android:id="@+id/claveP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/clave" />

            <EditText
                android:id="@+id/hintClaveP4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/clave_hint"
                android:inputType="textPassword"
                android:paddingStart="8dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/reingresar_clave" />

            <EditText
                android:id="@+id/reingClaveP4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/reingr_clave_int"
                android:inputType="textPassword"
                android:paddingStart="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCrearP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/crear_cuenta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.166" />

        <TextView
            android:id="@+id/loginP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/tiene_cuenta"
            android:textColor="@color/azul"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCrearP4"
            app:layout_constraintVertical_bias="0.305" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>