<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.evintegradoracinco.viewModel.RequestViewModel" />

        <variable
            name="lifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />
    </data>

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RequestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/volverRequest"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/left" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/jua"
                    android:text="@string/ingresar_dinero"
                    android:textAlignment="textStart"
                    android:paddingLeft="30dp"
                    android:textColor="@color/plomoOscuro"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/plomoClaro"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="154dp"
                    android:layout_height="78dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/foto2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jua"
                        android:text="@string/user_1"
                        android:textColor="@color/plomoOscuro" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jua"
                        android:text="@string/email_user1"
                        android:textColor="@color/plomo"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/cant_ingresar"
                android:textColor="@color/plomoOscuro"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/ingresarDinero"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/borde_verde"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/monto"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColorHint="@color/verde" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/notas"
                android:textColor="@color/plomoOscuro"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/notaIngresar"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/mensaje_trans"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/jua"
                android:paddingLeft="120dp"
                android:text="@string/ingresar_dinero"
                app:icon="@drawable/send"
                app:iconPadding="-90dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>