<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Integrar viewModel en el diseño -->

    <data>
        <variable
            name="viewModel"
            type="com.example.evintegradoracinco.viewModel.SendViewModel" />

        <variable
            name="lifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />
    </data>

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/volverSend"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/left" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/jua"
                    android:paddingLeft="30dp"
                    android:text="@string/enviar_dinero"
                    android:textAlignment="textStart"
                    android:textColor="@color/plomoOscuro"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/plomoClaro"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="154dp"
                    android:layout_height="78dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/foto5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jua"
                        android:text="@string/user_5"
                        android:textColor="@color/plomoOscuro" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jua"
                        android:text="@string/email_user5"
                        android:textColor="@color/plomo"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/cant_enviar"
                android:textColor="@color/plomoOscuro"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/ingresarMonto"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/borde_verde"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/monto"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/verde"
                android:textColorHint="@color/verde" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/notas"
                android:textColor="@color/plomoOscuro"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/notaEnviar"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/redondear_borde_form"
                android:ems="10"
                android:fontFamily="@font/jua"
                android:hint="@string/mensaje_trans"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jua"
                android:text="@string/enviar_dinero"
                android:textColor="@color/plomoOscuro"
                app:icon="@drawable/send_icon"
                app:iconTint="@color/plomoOscuro"
                android:theme="@style/Base.Theme.AlkeWalletJavaAndroid.btn"
                android:paddingLeft="150dp"
                app:iconPadding="-70dp"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>



        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>