<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginSingUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondodos">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154"
            app:shapeAppearanceOverlay="@style/radius"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textP2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgP2"
            app:layout_constraintVertical_bias="0.028"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/alke_wallet"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="84dp" />

        <TextView
            android:id="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/texto_p2"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="220dp" />

        <Button
            android:id="@+id/btnP2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.618"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/crear_cuenta"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="281dp" />

        <TextView
            android:id="@+id/text2p2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnP2"
            app:layout_constraintVertical_bias="0.23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/tiene_cuenta"
            android:textColor="@color/azul"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="123dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>